# TekirV3.0.2

./: CMakeLists.txt
Log/: dataLog.txt
include/: functions.hpp  main.hpp  parameters.hpp  trajectory.hpp
rsc/urdf/: tekir3mesh.urdf  tekir3mesh_new.urdf  tekir3mesh_new_V2.urdf
src/: functions.cpp  main.cpp  trajectory.cpp
